# rs-guidelines

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages.yml
best-practices/documentation-community/: index.html
best-practices/identity/: index.html
best-practices/interoperability/: index.html
best-practices/motivation-scope/: index.html
best-practices/overview/: index.html
best-practices/planning/: index.html
best-practices/risks/: index.html
best-practices/sharing-licensing/: index.html
best-practices/testing-quality/: index.html
best-practices/versioning-releases/: index.html
docs/: .pages  index.md
docs/best-practices/: .pages  details-best-practices-smp.md  documentation-community.md  identity.md  interoperability.md  motivation-scope.md  overview.md  planning.md  risks.md  sharing-licensing.md  smp-intro.md  software-examples.md  testing-quality.md  versioning-releases.md
docs/resources/: .pages  organizations.md
docs/rs/: .pages  definitions-examples.md  is-developing-rs.md
docs/smp/: .pages  sciwiz.md  smp-intro.md
resources/organizations/: index.html
rs/definitions-examples/: index.html
rs/is-developing-rs/: index.html
search/: search_index.json
smp/sciwiz/: index.html
smp/smp-intro/: index.html
src/: cli.py
