[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smp-fair-practices"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC BY 4.0" }
dependencies = [
    "PyYAML==6.0.*",
    "mkdocs==1.6.*",
    "mkdocs-material==9.5.*",
    "mkdocs-material-extensions==1.3.*",
    "mkdocs-get-deps==0.2.*",
    "mkdocs-awesome-pages-plugin==2.9.*"
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
rs-serve = "cli:serve"